@@ -1,3 +1,4 @@
+Make another histogram that uses the first click as time-zero instead of when the sim is open
 For the time chart, add time on views: molecules & bar graph
 Plot the histogram of average number of clicks for each condition
 For the time chart, added time spent on each solution
